# credit_card_fraud_detection

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: docker-build.yml  test.yml
api/: limiter.py  models.py
api/routes/: predictions.py
api/services/: model_service.py
models/linear_regression/: linear_reg_baseline_model.pkl
notebooks/: .gitignore  eda.ipynb  training.ipynb
tests/: conftest.py
tests/api/: test_predictions.py
tests/services/: test_model_service.py
